# Municipal_Spending_Metrics

./: .gitignore  LICENSE  README.md  pyproject.toml
data/scraping/data_raw/: pagamento.xml
src/crawler_scraping/: crawler_pl.py  main.py
src/lib/: utils.py
