[tool.poetry]
name = "project-municipal-spending-metrics"
version = "0.1.0"
description = ""
authors = ["Yan Robim <yanrobim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.2"
selenium = "^4.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
